--- a/package.json
+++ b/package.json
@@ -3,17 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "chart.js": "^4.3.2",
+    "leaflet": "^1.9.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
